--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <a href="signup.html">Sign Up</a>
                 </li>
             </ul>
-            <button type="button"><a href="login.html">Log In</a></button>
+            <button type="button"><a style="text-decoration: none;" ="login.html">Log In</a></button>
             
         </div>
     </div>
