--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
             <li>
                 <a href="#">
                     <span class="fa fas fa-plus-square"></span>
-                    <span><button >Playlist</button>
-                    </span>
+                    <span>Playlist</span>
                 </a>
             </li>
             
